# regex-training

./: main.py  pyproject.toml  regex_version.py  test_sample.py
