[tool.poetry]
name = "bs4"
version = "0.1.0"
description = ""
authors = ["Ulukman Amangeldiev <ulukmanatageldiuulu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = 'env/'
line_length = 79

[tool.isort]
line_length = 79
skip_gitignore = true
